src/components/hero/Hero.module.css
.heroIntro {
    text-align: center;
    display: flex;
    flex-direction: row;
}

.heroSpeech {
    flex: 1 1 auto;
    max-width: 50%;
}

.heroImage {
    flex: 1 1 auto;
    margin-top: var(--theme-size-space-6);
}

.socials {
    margin-top: var(--theme-size-space-3);
}

.heroImage img {
    /* Fix gatsby image loading */
    object-fit: contain !important;
}

@media screen and (max-width: 640px) {
    .heroIntro {
        flex-direction: column;
    }

    .heroSpeech {
        max-width: none;
    }

    .heroSpeech .heroSpeechComponent:after {
        text-align: left;
        right: 25%;
    }
}

.interesting {
    display: inline-block;
    animation: interesting 3s ease;
    animation-delay: 1.5s;
}

@keyframes interesting {
    0% {
        opacity: 1;
        transform: rotateX(90def);
        color: var(--theme-color-black);
    }

    50% {
        opacity: 1;
        transform: rotateX(720deg);
        color: maroon;
    }

    100% {
        opacity: 1;
        transform: rotateX(720deg);
        color: var(--theme-color-black);
    }
}

.workplace {
    display: inline-block;
    animation: workplace 1s ease;
    animation-delay: 3s;
}

@keyframes workplace {
    0% {
        transform: scale(1) rotate(0);
        color: var(--theme-color-black);
    }

    25% {
        transform: rotate(-5deg);
    }

    50% {
        transform: scale(1.2) rotate(5deg);
        color: purple;
    }

    75% {
        transform: rotate(-5deg);
    }

    100% {
        transform: scale(1) rotate(0);
        color: var(--theme-color-black);
    }
}

